NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/CTBR_Address__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Address__c</fullName>
    <formula>CASE(
TEXT(CTBR_Warehouse__c),
&quot;CTB02&quot;, &quot;1&quot;,
&quot;CTB01&quot;, &quot;2&quot;,
&quot;Santa Catarina&quot;, &quot;3&quot;,
&quot;4&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTBR Address</label>
    <type>Text</type>
</CustomField>