NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/CTBR_Pricing__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CTBR Pricing</label>
    <type>Checkbox</type>
</CustomField>