NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/CTBR_Unit_Price_BRL__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Unit_Price_BRL__c</fullName>
    <formula>CTBR_Unit_Price_USD__c * $CustomMetadata.CTBR_Exchange_Rate__mdt.CTBR_Units.Current_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTBR Unit Price (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>