NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/CTBR_Unit_Price_USD__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Unit_Price_USD__c</fullName>
    <label>CTBR Unit Price (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>