NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/CTBR_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Warehouse__c</fullName>
    <label>CTBR Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CTB02</fullName>
                <label>Goiás</label>
            </value>
            <value>
                <fullName>CTB01</fullName>
                <label>Rio Grande do Sul</label>
            </value>
            <value>
                <fullName>Santa Catarina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>