NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/CTBRRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>CTBRRecordTypeId__c</fullName>
    <description>CAP-11749 -CTBR Changes</description>
    <label>CTBRRecordTypeId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>