NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/CTM_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>CTM_Unit_Price__c</fullName>
    <label>CTM Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>