NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/CTM_Unit_Pricing__c.field-meta.xml
<CustomField>
    <fullName>CTM_Unit_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CTM Unit Pricing</label>
    <type>Checkbox</type>
</CustomField>