NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/NATT_BluEdge_Component_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_BluEdge_Component_Id__c</fullName>
    <label>BluEdge Component Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>