NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/NATT_Dealer_Account__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lookup Data</relationshipLabel>
    <relationshipName>Lookup_Data</relationshipName>
    <type>Lookup</type>
</CustomField>