NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/NATT_End_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>NATT_End_Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lookup Data (End Customer Account)</relationshipLabel>
    <relationshipName>Lookup_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>