NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/NATT_End_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_End_Date__c</fullName>
    <description>For looking up the correct price for NATT Units</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>