NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/NATT_Months__c.field-meta.xml
<CustomField>
    <fullName>NATT_Months__c</fullName>
    <label>Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_BluEdge_Months</valueSetName>
    </valueSet>
</CustomField>