NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/NATT_P_N__c.field-meta.xml
<CustomField>
    <fullName>NATT_P_N__c</fullName>
    <description>the part number coming from the product</description>
    <formula>SBQQ__Product__r.NATT_P_N__c</formula>
    <label>P/N</label>
    <type>Text</type>
</CustomField>