NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/NATT_Pre_Approved_Discount__c.field-meta.xml
<CustomField>
    <fullName>NATT_Pre_Approved_Discount__c</fullName>
    <label>Pre-Approved Discount %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>