NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/NATT_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product_Code__c</fullName>
    <formula>SBQQ__Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>