NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/NATT_Tavant_ID__c.field-meta.xml
<CustomField>
    <fullName>NATT_Tavant_ID__c</fullName>
    <label>Tavant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>