NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/NATT_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>NATT_Unique_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>