NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Manufacturing Plant</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Peru</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>Panama</fullName>
            </value>
            <value>
                <fullName>Ecuador</fullName>
            </value>
            <value>
                <fullName>REFRITRANS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>