NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/Product_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_External_ID__c</fullName>
    <formula>SBQQ__Product__r.External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product External ID</label>
    <type>Text</type>
</CustomField>