NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/fields/Unit_Tavant_Id_2__c.field-meta.xml
<CustomField>
    <fullName>Unit_Tavant_Id_2__c</fullName>
    <formula>TEXT(NATT_Unit__c) &amp; &quot;-&quot; &amp; NATT_Tavant_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit-Tavant Id 2</label>
    <type>Text</type>
</CustomField>