NATTQA-ENV/force-app/main/default/objects/SBQQ__LookupData__c/listViews/CTM_Unit_Pricing.listView-meta.xml
<ListView>
    <fullName>CTM_Unit_Pricing</fullName>
    <columns>NAME</columns>
    <columns>CTM_Unit_Pricing__c</columns>
    <columns>SBQQ__Product__c</columns>
    <columns>NATT_Product_Code__c</columns>
    <columns>NATT_Start_Date__c</columns>
    <columns>NATT_End_Date__c</columns>
    <columns>Origen__c</columns>
    <columns>CTM_Unit_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CTM_Unit_Pricing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>CTM Unit Pricing</label>
    <language>en_US</language>
</ListView>